--- a/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
+++ b/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/EBayego/AI_Gymnasium/blob/main/Lunar%20Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "LbZcI9ZXHl3a"
       },
       "source": [
@@ -634,8 +624,7 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "display_name": "Python 3",
