--- a/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
+++ b/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
@@ -1,5 +1,15 @@
 {
   "cells": [
+      {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/EBayego/del/blob/main/Deep_Q_Learning_Lunar_Landing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
