--- a/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
+++ b/Lunar Lander/Colab/Deep_Q_Learning_Lunar_Landing.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/14WE0ZEHna5OgAdiNAF-BQEIF6MqTqyrs?usp=sharing" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/EBayego/del/blob/main/Deep_Q_Learning_Lunar_Landing.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
